crates/sotf-plugins/tests/snapshots/render_plan_snapshots__downmix__downmix__ipad_landscape.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "downmix",
  "width": 1024.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "config_controls": [
    {
      "param_index": 4,
      "param_name": "Phase Coherence",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 7,
      "param_name": "ITU-R BS.775 Mode",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "main_groups": [
    {
      "title": "CHANNEL GAINS",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Center Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -12.0,
            0.0
          ],
          "read_only": false
        },
        {
          "param_index": 1,
          "param_name": "Surround Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -12.0,
            0.0
          ],
          "read_only": false
        },
        {
          "param_index": 2,
          "param_name": "Height Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            0.0
          ],
          "read_only": false
        },
        {
          "param_index": 3,
          "param_name": "LFE Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            0.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Phase",
      "controls": [
        {
          "param_index": 5,
          "param_name": "Phase Blend Low",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            100.0,
            1000.0
          ],
          "read_only": false
        },
        {
          "param_index": 6,
          "param_name": "Phase Blend High",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            1000.0,
            5000.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
